add objectives, outcome, research methods

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -49,6 +49,15 @@
   file = {/home/ro/Zotero/storage/AU8BQEZD/Argüello et al. - 2019 - Comparison of segmentation tools for structural an.pdf}
 }
 
+@article{aydinRELIABILITYREPRODUCIBILITYTIMEEFFICIENCY2020,
+  title = {{{RELIABILITY}}, {{REPRODUCIBILITY AND TIME-EFFICIENCY OF VOLUMETRIC EVALUATION OF LUNG TUMORS BY 3D-SLICER SEGMENTATION WIZARD}}},
+  author = {Aydin, Huseyin and Sofu, Mehmet Mahir and Salkaci, Abdulkerim and Evrimler, Sehnaz and Karaibrahimoglu, Adnan},
+  date = {2020},
+  journaltitle = {MEDICAL DIAGNOSIS},
+  pages = {105},
+  url = {https://books.google.at/books?id=immSEAAAQBAJ&lpg=PA105&ots=6V4VBKRhBt&dq=RELIABILITY%2C%20REPRODUCIBILITY%20AND%20TIME-EFFICIENCY%20OF%20VOLUMETRIC%20EVALUATION%20OF%20LUNG%20TUMORS%20BY%203D-SLICER%20SEGMENTATION%20WIZARD&lr&pg=PA105#v=onepage&q=RELIABILITY,%20REPRODUCIBILITY%20AND%20TIME-EFFICIENCY%20OF%20VOLUMETRIC%20EVALUATION%20OF%20LUNG%20TUMORS%20BY%203D-SLICER%20SEGMENTATION%20WIZARD&f=false}
+}
+
 @article{bagheriOverviewSmallfieldDosimetry2017,
   title = {An Overview on Small-Field Dosimetry in Photon Beam Radiotherapy: {{Developments}} and Challenges},
   shorttitle = {An Overview on Small-Field Dosimetry in Photon Beam Radiotherapy},
@@ -136,6 +145,24 @@
   pagetotal = {601}
 }
 
+@incollection{birsanOneHundredYears2006,
+  title = {One {{Hundred Years Since}} the {{Introduction}} of the {{Set Distance}} by {{Dimitrie Pompeiu}}},
+  booktitle = {System {{Modeling}} and {{Optimization}}},
+  author = {Birsan, T. and Tiba, D.},
+  editor = {Ceragioli, F. and Dontchev, A. and Futura, H. and Marti, K. and Pandolfi, L.},
+  date = {2006},
+  volume = {199},
+  pages = {35--39},
+  publisher = {{Kluwer Academic Publishers}},
+  location = {{Boston}},
+  doi = {10.1007/0-387-33006-2_4},
+  url = {http://link.springer.com/10.1007/0-387-33006-2_4},
+  urldate = {2024-02-06},
+  isbn = {978-0-387-32774-7},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/QYYKGRPM/Birsan and Tiba - 2006 - One Hundred Years Since the Introduction of the Se.pdf}
+}
+
 @article{borowiczUltraHypofractionatedProtonTherapy2021,
   title = {Ultra-{{Hypofractionated Proton Therapy}} in {{Localized Prostate Cancer}}: {{Passive Scattering}} versus {{Intensity-Modulated Proton Therapy}}},
   shorttitle = {Ultra-{{Hypofractionated Proton Therapy}} in {{Localized Prostate Cancer}}},
@@ -202,6 +229,22 @@
   file = {/home/ro/Zotero/storage/5FLA5SLP/Devine et al. - 2022 - MusMorph, a database of standardized mouse morphol.pdf}
 }
 
+@article{diceMeasuresAmountEcologic1945,
+  title = {Measures of the {{Amount}} of {{Ecologic Association Between Species}}},
+  author = {Dice, Lee R.},
+  date = {1945-07},
+  journaltitle = {Ecology},
+  shortjournal = {Ecology},
+  volume = {26},
+  number = {3},
+  pages = {297--302},
+  issn = {0012-9658, 1939-9170},
+  doi = {10.2307/1932409},
+  url = {https://esajournals.onlinelibrary.wiley.com/doi/10.2307/1932409},
+  urldate = {2024-02-06},
+  langid = {english}
+}
+
 @article{dieckmeyerEffectMRIAcquisition2021,
   title = {Effect of {{MRI}} Acquisition Acceleration via Compressed Sensing and Parallel Imaging on Brain Volumetry},
   author = {Dieckmeyer, Michael and Roy, Abhijit Guha and Senapati, Jyotirmay and Wachinger, Christian and Grundl, Lioba and Döpfert, Jörg and Bertran, Pere Ferrera and Lemke, Andreas and Zimmer, Claus and Kirschke, Jan S. and Hedderich, Dennis M.},
@@ -260,6 +303,24 @@
   eventtitle = {Picture {{Archiving}} and {{Communications Systems}} for {{Medical Applications}}}
 }
 
+@article{eggerPituitaryAdenomaVolumetry2012,
+  title = {Pituitary {{Adenoma Volumetry}} with {{3D Slicer}}},
+  author = {Egger, Jan and Kapur, Tina and Nimsky, Christopher and Kikinis, Ron},
+  editor = {Muñoz-Barrutia, Arrate},
+  date = {2012-12-11},
+  journaltitle = {PLoS ONE},
+  shortjournal = {PLoS ONE},
+  volume = {7},
+  number = {12},
+  pages = {e51788},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0051788},
+  url = {https://dx.plos.org/10.1371/journal.pone.0051788},
+  urldate = {2024-02-06},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/Z9QJQM7A/Egger et al. - 2012 - Pituitary Adenoma Volumetry with 3D Slicer.pdf}
+}
+
 @artwork{epzcawRainbowHologram2011,
   title = {Rainbow Hologram},
   author = {{Epzcaw}},
@@ -267,6 +328,20 @@
   url = {https://commons.wikimedia.org/wiki/File:Rainbow_hologram.jpeg},
   abstract = {This is a modified version of "Hol.Thylacines.jpg" created by "Receptive"},
   langid = {english}
+}
+
+@article{essamlaliBileDuctSegmentation2023,
+  title = {Bile {{Duct Segmentation Methods Under 3D Slicer Applied}} to {{ERCP}}: {{Advantages}} and {{Disadvantages}}},
+  shorttitle = {Bile {{Duct Segmentation Methods Under 3D Slicer Applied}} to {{ERCP}}},
+  author = {Essamlali, Abdelhadi and Millot-Maysounabe, Vincent and Chartier, Marion and Salin, Grégoire and Becq, Aymeric and Arrivé, Lionel and Duboc Camus, Marine and Szewczyk, Jérôme and Claude, Isabelle},
+  date = {2023-11-09},
+  journaltitle = {International Journal of Biomedical Engineering and Clinical Science},
+  shortjournal = {IJBECS},
+  doi = {10.11648/j.ijbecs.20230904.11},
+  url = {http://www.sciencepg.com/article/10.11648.j.ijbecs.20230904.11},
+  urldate = {2024-02-06},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/MGUXM4UG/Essamlali et al. - 2023 - Bile Duct Segmentation Methods Under 3D Slicer App.pdf}
 }
 
 @article{fishmanVolumeRenderingMaximum2006,
@@ -283,6 +358,20 @@
   doi = {10.1148/rg.263055186},
   url = {http://pubs.rsna.org/doi/10.1148/rg.263055186},
   urldate = {2022-07-12},
+  langid = {english}
+}
+
+@article{gaudeulPublicProvisionPrivate2005,
+  title = {Public {{Provision}} of a {{Private Good}}: {{What}} Is the {{Point}} of the {{BSD License}}?},
+  shorttitle = {Public {{Provision}} of a {{Private Good}}},
+  author = {Gaudeul, Alexia},
+  date = {2005},
+  journaltitle = {SSRN Electronic Journal},
+  shortjournal = {SSRN Journal},
+  issn = {1556-5068},
+  doi = {10.2139/ssrn.933631},
+  url = {http://www.ssrn.com/abstract=933631},
+  urldate = {2024-02-06},
   langid = {english}
 }
 
@@ -423,6 +512,24 @@
   url = {https://www.honda.at/motorcycles/range/adventure/cb500x/specifications.html#},
   urldate = {2022-09-24},
   langid = {ngerman}
+}
+
+@article{houNewSimpleBrain2020,
+  title = {A New Simple Brain Segmentation Method for Extracerebral Intracranial Tumors},
+  author = {Hou, Xiaolin and Yang, Dongdong and Li, Dingjun and Liu, Meijun and Zhou, Yuan and Shi, Min},
+  editor = {Sherman, Jonathan H},
+  date = {2020-04-17},
+  journaltitle = {PLOS ONE},
+  shortjournal = {PLoS ONE},
+  volume = {15},
+  number = {4},
+  pages = {e0230754},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0230754},
+  url = {https://dx.plos.org/10.1371/journal.pone.0230754},
+  urldate = {2024-02-06},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/K4XZQ3U9/Hou et al. - 2020 - A new simple brain segmentation method for extrace.pdf}
 }
 
 @article{huangRecentAdvancesSkinlike2022,
@@ -700,6 +807,15 @@
   urldate = {2022-09-28},
   langid = {english},
   file = {/home/ro/Zotero/storage/TV38NZ48/Lee et al. - 2019 - Recent advances in metasurface hologram technologi.pdf}
+}
+
+@article{licenseGnuGeneralPublic1989,
+  title = {Gnu General Public License},
+  author = {License, GNU General Public},
+  date = {1989},
+  journaltitle = {Retrieved December},
+  volume = {25},
+  pages = {2014}
 }
 
 @article{linDeepLearningenabledCoronary2022,
@@ -1470,6 +1586,24 @@
   abstract = {In this study, we report our experience in commissioning a commercial treatment planning system (TPS) for fast-raster scanning of carbon-ion beams. This TPS uses an analytical dose calculation algorithm, a pencil-beam model with a triple Gaussian form for the lateral-dose distribution, and a beam splitting algorithm to consider lateral heterogeneity in a medium. We adopted the mixed beam model as the relative biological effectiveness (RBE) model for calculating the RBE values of the scanned carbon-ion beam. To validate the modeled physical dose, we compared the calculations with measurements of various relevant quantities as functions of the field size, range and width of the spread-out Bragg peak (SOBP), and depth–dose and lateral-dose profiles for a 6-mm SOBP in water. To model the biological dose, we compared the RBE calculated with the newly developed TPS to the RBE calculated with a previously validated TPS that is in clinical use and uses the same RBE model concept. We also performed patient-specific measurements to validate the dose model in clinical situations. The physical beam model reproduces the measured absolute dose at the center of the SOBP as a function of field size, range, and SOBP width and reproduces the dose profiles for a 6-mm SOBP in water. However, the profiles calculated for a heterogeneous phantom have some limitations in predicting the carbon-ion-beam dose, although the biological doses agreed well with the values calculated by the validated TPS. Using this dose model for fast-raster scanning, we successfully treated more than 900 patients from October 2018 to October 2020, with an acceptable agreement between the TPS-calculated and measured dose distributions. We conclude that the newly developed TPS can be used clinically with the understanding that it has limited accuracies for heterogeneous media.},
   langid = {english},
   file = {/home/ro/Zotero/storage/BMYZ4ZM3/Yagi et al. - 2022 - Commissioning a newly developed treatment planning.pdf}
+}
+
+@article{yipApplication3DSlicer2017,
+  title = {Application of the {{3D}} Slicer Chest Imaging Platform Segmentation Algorithm for Large Lung Nodule Delineation},
+  author = {Yip, Stephen S. F. and Parmar, Chintan and Blezek, Daniel and Estepar, Raul San Jose and Pieper, Steve and Kim, John and Aerts, Hugo J. W. L.},
+  editor = {Van Ooijen, Peter M.A.},
+  date = {2017-06-08},
+  journaltitle = {PLOS ONE},
+  shortjournal = {PLoS ONE},
+  volume = {12},
+  number = {6},
+  pages = {e0178944},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0178944},
+  url = {https://dx.plos.org/10.1371/journal.pone.0178944},
+  urldate = {2024-02-06},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/T66AER9E/Yip et al. - 2017 - Application of the 3D slicer chest imaging platfor.pdf}
 }
 
 @article{yushkevichUserguided3DActive2006,
